--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<p>Hello! This is the website for Tammy's 61B section (TuTh 11:00 AM). Here, I'll 
-post material relevant to section, additional resources, 
-clarifications/corrections from class, etc. It will be pretty soon!  </p>
+<p>Hello! This is the website for Tammy's 61B section. <br/>
+Here, I'll post material relevant to section, additional resources, <br/>
+clarifications/corrections from class, etc. It will be pretty soon! </p>
 
+<h1>Info</h1>
+<b>Discussion:</b> Tuesday 11:00 AM - 12:00 PM @ 229 Dwinelle
+<b>Lab:</b> Thursday 11:00 AM - 1:00 PM @ 273 Soda
+<b>Office Hours:</b> Tuesday 12:00 PM - 1:00 PM @ 109 Morgan
+
+<h1>Discussion Material</h1>
 <h2>Week 3</h2>
-<a href="">Attendance/Feedback</a>
-<a href="">Slides</a>
+<a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLScBxYpLqcgFR5q2xFOzx_d7-0uxZ9OhRxcDnQ2EqMS8kMcukg/viewform">Attendance/Feedback</a> <br/>
+<a href="https://docs.google.com/a/berkeley.edu/presentation/d/19LYmDUeU9UbLqNZotIQWL81flsJd9ku3PZsFr7-zcKA/edit?usp=sharing">Slides</a>
 
 
