--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ Here, I'll post material relevant to section, additional resources, <br/>
 clarifications/corrections from class, etc. It will be pretty soon! </p>
 
 <h1>Info</h1>
-<b>Discussion:</b> Tuesday 11:00 AM - 12:00 PM @ 229 Dwinelle
-<b>Lab:</b> Thursday 11:00 AM - 1:00 PM @ 273 Soda
-<b>Office Hours:</b> Tuesday 12:00 PM - 1:00 PM @ 109 Morgan
+<b>Discussion:</b> Tuesday 11:00 AM - 12:00 PM @ 229 Dwinelle <br/>
+<b>Lab:</b> Thursday 11:00 AM - 1:00 PM @ 273 Soda <br/>
+<b>Office Hours:</b> Tuesday 12:00 PM - 1:00 PM @ 109 Morgan <br/>
 
 <h1>Discussion Material</h1>
 <h2>Week 3</h2>
