--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-<p>Hello! This is the website for Tammy's 61B section. <br/>
-Here, I'll post material relevant to section, additional resources, <br/>
-clarifications/corrections from class, etc. It will be pretty soon! </p>
+---
+layout: default
+---
+<h1 class="headline">{{site.title}}</h1>
 
-<h1>Info</h1>
-<b>Discussion:</b> Tuesday 11:00 AM - 12:00 PM @ 229 Dwinelle <br/>
-<b>Lab:</b> Thursday 11:00 AM - 1:00 PM @ 273 Soda <br/>
-<b>Office Hours:</b> Tuesday 12:00 PM - 1:00 PM @ 109 Morgan <br/>
+This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
+<a href="http://datastructur.es">CS 61B</a> section.<br/>
 
-<h1>Discussion Material</h1>
+<ul>
+	<li><b>Discussion:</b> Tu 11:00 AM - 12:00 PM @ 229 Dwinelle </li>
+	<li><b>Lab:</b> Th 11:00 AM - 1:00 PM @ 273 Soda </li>
+	<li><b>Office Hours:</b> Tu 12:00 PM - 1:00 PM @ 109 Morgan </li>
+</ul>
+
+<hr>
+
+<h2>Week 2</h2>
+<ul>
+	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSfV2NCmBuvC9VmNfzEQA-Ct-a-f0ZKemdyto7dy6SrcvTamDQ/viewform">Learning survey</a></li>
+</ul>
+
 <h2>Week 3</h2>
-<a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLScBxYpLqcgFR5q2xFOzx_d7-0uxZ9OhRxcDnQ2EqMS8kMcukg/viewform">Attendance/Feedback</a> <br/>
-<a href="https://docs.google.com/a/berkeley.edu/presentation/d/19LYmDUeU9UbLqNZotIQWL81flsJd9ku3PZsFr7-zcKA/edit?usp=sharing">Slides</a>
+<ul>
+	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLScBxYpLqcgFR5q2xFOzx_d7-0uxZ9OhRxcDnQ2EqMS8kMcukg/viewform">Attendance/Feedback</a> </li>
+	<li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/19LYmDUeU9UbLqNZotIQWL81flsJd9ku3PZsFr7-zcKA/edit?usp=sharing">Slides</a></li>
+</ul>
 
 <h2>Week 4</h2>
-<a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSdM7EV3lBP06MZG-bJHkNxVSRErMV6_EzgPxjyK7wCtWIgCiA/viewform">Attendance/Feedback</a> <br/>
-<a href="https://docs.google.com/a/berkeley.edu/presentation/d/1rfq3dk6jauJere2i7q5x1g_htplXjQFMSp-2t9Uzjkk/edit?usp=sharing">Slides</a>
+<ul>
+	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSdM7EV3lBP06MZG-bJHkNxVSRErMV6_EzgPxjyK7wCtWIgCiA/viewform">Attendance/Feedback</a> </li>
+	<li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1rfq3dk6jauJere2i7q5x1g_htplXjQFMSp-2t9Uzjkk/edit?usp=sharing">Slides</a> </li>
+</ul>
 
