add disc6 slides

--- a/index.html
+++ b/index.html
@@ -35,3 +35,9 @@ This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
 <ul>
     <li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1-OEdsVpyGT1GLvfQkA5Csa7qGxIMjLrSXyaNeNvi8sc/edit?usp=sharing">Linked List Review Slides</a> </li>
 </ul>
+
+<h2>Week 6</h2>
+<ul>
+    <li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1aRa8SiQgIp5MM5pSwF3_-8I-nc1L_J2MKtbcgzQdEnw/edit?usp=sharing">ADT Slides</a> </li>
+</ul>
+
