add disc06 attendance

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@ This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
 <h2>Week 6</h2>
 <ul>
     <li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1aRa8SiQgIp5MM5pSwF3_-8I-nc1L_J2MKtbcgzQdEnw/edit?usp=sharing">ADT Slides</a> </li>
+    <li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSf2Ht7Zgd526PdmMstWc-HY1uyi1rZY4t5ZjOR2-lpAkhmkKg/viewform">Attendance/Feedback</a> </li>
 </ul>
 
