--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
 	<li><b>Discussion:</b> Tu 11:00 AM - 12:00 PM @ 229 Dwinelle </li>
 	<li><b>Lab:</b> Th 11:00 AM - 1:00 PM @ 273 Soda </li>
 	<li><b>Office Hours:</b> Tu 12:00 PM - 1:00 PM @ 109 Morgan </li>
-</ul>
+</ul>  
+
+You can contact me through email (tammynguyen@berkeley.edu) or through this <a href="https://docs.google.com/forms/d/e/1FAIpQLSf3h9yaC0BkqiZcQY_tuAWnY4sTeFZ1AuJt0y_UcPVIsz-3wg/viewform">anonymous form</a>.
 
 <hr>
 
@@ -21,14 +23,14 @@ This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
 
 <h2>Week 3</h2>
 <ul>
-	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLScBxYpLqcgFR5q2xFOzx_d7-0uxZ9OhRxcDnQ2EqMS8kMcukg/viewform">Attendance/Feedback</a> </li>
 	<li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/19LYmDUeU9UbLqNZotIQWL81flsJd9ku3PZsFr7-zcKA/edit?usp=sharing">Lists Slides</a></li>
+	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLScBxYpLqcgFR5q2xFOzx_d7-0uxZ9OhRxcDnQ2EqMS8kMcukg/viewform">Attendance/Feedback</a> </li>
 </ul>
 
 <h2>Week 4</h2>
 <ul>
-	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSdM7EV3lBP06MZG-bJHkNxVSRErMV6_EzgPxjyK7wCtWIgCiA/viewform">Attendance/Feedback</a> </li>
 	<li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1rfq3dk6jauJere2i7q5x1g_htplXjQFMSp-2t9Uzjkk/edit?usp=sharing">Inheritance Slides</a> </li>
+	<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSdM7EV3lBP06MZG-bJHkNxVSRErMV6_EzgPxjyK7wCtWIgCiA/viewform">Attendance/Feedback</a> </li>
 </ul>
 
 <h2>Week 5</h2>
@@ -41,5 +43,11 @@ This is the website for <a href="http://tmmydngyn.com/">Tammy</a>'s Spring 2017
     <li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1aRa8SiQgIp5MM5pSwF3_-8I-nc1L_J2MKtbcgzQdEnw/edit?usp=sharing">ADT Slides</a> </li>
     <li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSf2Ht7Zgd526PdmMstWc-HY1uyi1rZY4t5ZjOR2-lpAkhmkKg/viewform">Discussion Attendance/Feedback</a> </li>
     <li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSfwaBM5mfl_3fH-YEwy6_S52v6IdOTeRjQx6Ud_i5tkpwSCqA/viewform">Lab Attendance</a></li>
+</ul>
+
+<h2>Week 7</h2>
+<ul>
+    <li><a href="https://docs.google.com/a/berkeley.edu/presentation/d/1bmcay-dSXrHtI40oGPBnkVC5NlsHT5oygoesgTZD6OY/edit?usp=sharing">Asymptotic Analysis Slides</a> </li>
+    <li><a href="https://docs.google.com/a/berkeley.edu/forms/d/e/1FAIpQLSfyqhzKwG_2S76HHFLsO0YbyOjBOrpM47cNLEImAUDALTfU8A/viewform">Discussion Attendance/Feedback</a> </li>
 </ul>
 
